Add create shelf endpoint
