# domain/entities/shelf.go
@@ -1,5 +1,9 @@
 package entities
 
+import "time"
+
 type Shelf struct {
-	Name string
+	Name       string
+	CreateTime time.Time
+	UpdateTime time.Time
 }
